fixed hero spacing

--- a/style.css
+++ b/style.css
@@ -8,13 +8,11 @@ body {
 
 /* HERO */
 .hero {
-  height: 100vh;
+  min-height: 70vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
-  text-align: center;
 }
 
 .hero h1 {
